--- a/Class/Class6/Subjects/sst.html
+++ b/Class/Class6/Subjects/sst.html
@@ -125,7 +125,7 @@
                             </div>
                             <h3 class="text-xl font-semibold text-gray-800 ml-4">History</h3>
                         </div>
-                        <p class="text-gray-600">Understanding the past to learn about society and chang onclick="openLecturePopup(event, 'Subjects/maths.html')">.</p>
+                        <p class="text-gray-600">Understanding the past to learn about society and change.</p>
                     </div>
                 </div>
             </a>
