--- a/Class/Class11/Subjects/sst.html
+++ b/Class/Class11/Subjects/sst.html
@@ -87,7 +87,7 @@
 
             <!-- Subject Cards -->
 
-            <a href="Social Science/economics.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/economics.html')">
+            <a href="Social Science/economics.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/economics.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -101,7 +101,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/geography.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/geography.html')">
+            <a href="Social Science/geography.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/geography.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -115,7 +115,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/history.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/history.html')">
+            <a href="Social Science/history.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/history.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -129,7 +129,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/philosophy.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/philosophy.html')">
+            <a href="Social Science/philosophy.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/philosophy.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -143,7 +143,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/politicalscience.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/politicalscience.html')">
+            <a href="Social Science/politicalscience.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/politicalscience.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -157,7 +157,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/psychology.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/psychology.html')">
+            <a href="Social Science/psychology.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/psychology.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -171,7 +171,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/sociology.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/sociology.html')">
+            <a href="Social Science/sociology.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/sociology.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
