--- a/Class/Class7/Subjects/sst.html
+++ b/Class/Class7/Subjects/sst.html
@@ -87,7 +87,7 @@
 
             <!-- Subject Cards -->
 
-            <a href="Social Science/civics.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/civics.html')">
+            <a href="Social Science/civics.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/civics.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -101,7 +101,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/geography.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/geography.html')">
+            <a href="Social Science/geography.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/geography.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -115,7 +115,7 @@
                 </div>
             </a>
 
-            <a href="Social Science/history.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/history.html')">
+            <a href="Social Science/history.html" class="subject-card" onclick="openLecturePopup(event, 'Social Science/history.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
