--- a/Class/Class12/Subjects/science.html
+++ b/Class/Class12/Subjects/science.html
@@ -87,7 +87,7 @@
 
             <!-- Subject Cards -->
 
-            <a href="Science/physics.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/physics.html')">
+            <a href="Science/physics.html" class="subject-card" onclick="openLecturePopup(event, 'Science/physics.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -101,7 +101,7 @@
                 </div>
             </a>
 
-            <a href="Science/chemistry.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/chemistry.html')">
+            <a href="Science/chemistry.html" class="subject-card" onclick="openLecturePopup(event, 'Science/chemistry.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -115,7 +115,7 @@
                 </div>
             </a>
 
-            <a href="Science/biology.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/biology.html')">
+            <a href="Science/biology.html" class="subject-card" onclick="openLecturePopup(event, 'Science/biology.html')">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
