--- a/Class/Class6/class6.html
+++ b/Class/Class6/class6.html
@@ -10,63 +10,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
-<!-- Lecture Not Available Popup -->
-<div id="lecturePopup"
-     class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
 
-  <div class="bg-white rounded-xl w-[90%] max-w-md p-6 relative">
-
-    <!-- Close / Proceed anyway -->
-    
-
-    <h3 class="text-xl font-semibold mb-3">
-      Lectures not uploaded yet
-    </h3>
-
-    <p class="text-gray-600 mb-6">
-      Currently lectures are not available.
-      Stay with us, they will be updated soon.
-    </p>
-
-    <div class="flex justify-between">
-      <button onclick="closePopup()"
-              class="px-4 py-2 bg-gray-200 rounded-lg">
-        Go Back
-      </button>
-
-      <button onclick="proceedAnyway()"
-              class="px-4 py-2 bg-blue-600 text-white rounded-lg">
-        Proceed Anyway
-      </button>
-    </div>
-
-  </div>
-</div>
-
-<!-- Lecture Not Available JavaScript -->
-
-<script>
-  let targetPage = "";
-
-  function openLecturePopup(event, page) {
-    event.preventDefault();   // direct page open hone se roke
-    targetPage = page;        // kaunsa lecture page hai
-    document.getElementById("lecturePopup")
-      .classList.remove("hidden");
-  }
-
-  function closePopup() {
-    document.getElementById("lecturePopup")
-      .classList.add("hidden");
-    targetPage = "";
-  }
-
-  function proceedAnyway() {
-    if (targetPage) {
-      window.location.href = targetPage;
-    }
-  }
-</script>
 
 <body class="bg-gray-50 min-h-screen">
     <div class="container mx-auto px-4 py-12">
@@ -171,7 +115,7 @@
                 </div>
             </a>
 
-            <a href="Subjects/sst.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/sst.html')">
+            <a href="Subjects/sst.html" class="subject-card">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
