--- a/Class/Class9/class9.html
+++ b/Class/Class9/class9.html
@@ -157,7 +157,7 @@
                 </div>
             </a>
 
-            <a href="Subjects/science.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/science.html')">
+            <a href="Subjects/science.html" class="subject-card">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
@@ -171,7 +171,7 @@
                 </div>
             </a>
 
-            <a href="Subjects/sst.html" class="subject-card" onclick="openLecturePopup(event, 'Subjects/sst.html')">
+            <a href="Subjects/sst.html" class="subject-card">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 h-full flex flex-col">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-4">
